packages/next-swc/crates/core/tests/errors/next-font-loaders/no-args/input.js
import { Inter } from '@next/font/google'
fn()
Inter()
const inter = Inter()
